turotial_of_use fonctional v1.0

--- a/index.html
+++ b/index.html
@@ -69,18 +69,40 @@
 						<h1 style="font-weight: bold;text-align: center" class="display-6">Tutorial d'utilisation</h1>
 						<section>
 							<p>Bienvenu sur un tutoriel expliquant le fonctionnement du site. Cette marche à suivre démontre
-							les actions principales de la plateforme</p>
+							les actions principales de la plateforme.</p>
 						</section>
 						<section>
 							<h2>Page d'accueil</h2>
-							<p>Voici les différentes actions disponibles depuis la page d'accueil</p>
+							<p>Voici les différentes actions disponibles depuis la page d'accueil.</p>
 							<h3>Retoure à l'accueil</h3>
-							<p>En cliquant sur "Menu principal" cela permet de revenir à la page d'accueil</p>
+							<p>En cliquant sur "Menu principal" cela permet de revenir à la page d'accueil.</p>
 							<img class="tuto_images" src="./assets/tutorial/return_home.png">
+						</section>
+						<section>
 							<h3>Choisir son questionnaire</h3>
-							<p>En cliquant sur le bouton "Choisir questionnaire", cela ouvrira un menu déroulant contenant les
-							 différant établissement qui propose le questionnaire</p>
+							<p>En cliquant sur le bouton "Choisir questionnaire", cela ouvrira un menu déroulant contenant les différant établissement qui propose le questionnaire.</p>
 							<img class="tuto_images" src="./assets/tutorial/choose_questionnaire.png">
+						</section>
+						<section>
+							<h3>Remplissage du questionnaire</h3>
+							<p>Cette page permet de remplir le questionnaire propre à l'établissement sélectionné, le symbole <i class="icon-plus-sign"></i> permet d'afficher plus d'information sur la question.</p>
+							<p>Une fois toutes les questions évaluées, vous pouvez valider les réponses en cliquant sur le bouton "Valider mes réponses", ceci générera un graphique représentant vos résultats.</p>
+							<img class="tuto_images" src="./assets/tutorial/form.png">
+						</section>
+						<section>
+							<h3>Consultation des résultats</h3>
+							<p>Cette page affiche un graphique représentant vos réponses au questionnaire. Il y a plusieurs actions disponibles pour export votre résultat.</p>
+							<ul>
+								<li>Télécharger PDF permet d'exporter votre résultat en PDF, ce fichier PDF contient le graphique.</li>
+								<li>Télécharger mon résultat (.txt) permet d'export votre résultat au format fichier text, ce fichier contient le résultat de chaque question.</li>
+								<li>Importer anciens résultats(.txt) permet d'importer un ancien résultat exporter en fichier texte. Une fois importer les anciens résultats vont se "superposer" aux résultats actuels</li>
+							</ul>
+							<img class="tuto_images" src="./assets/tutorial/graphic.png">
+						</section>
+						<section>
+							<h3>Résultats des exportations</h3>
+							<p>Voici le résultat des différentes actions décrites ci-dessus.</p>
+							<img class="tuto_images" src="./assets/tutorial/resultat_export.png">
 						</section>
 					</div>
 				</div>
