add onglet aide clickable

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 						<!-- TODO: decide if we want this button -->
-						<li class="nav-item"><a class="nav-link active" aria-current="page" onclick="getTutorial()">Aide</a></li>
+						<li class="nav-item"><a class="nav-link active" href="#" aria-current="page" onclick="getTutorial()">Aide</a></li>
 					</ul>
 				</div>
 			</div>
@@ -68,7 +68,7 @@
 					<div class="container" id="tutorial" style="display: none">
 						<h1 style="font-weight: bold;text-align: center" class="display-6">Guide d'utilisation</h1>
 
-						<section>
+						<section style="text-align: center">
 							<p>Bienvenue sur ce guide d'utilisation du site. Cette marche à suivre explique
 							les actions principales de la plateforme.</p>
 						</section>
@@ -135,7 +135,7 @@
 							<p>Vous pouvez utiliser le lien Moodle du cours Digital Skills «Développer ses compétences numériques d’enseignant·e du supérieur» pour accéder aux ressources liées à ces compétences. </p>
 							<img class="tuto_images" src="./assets/tutorial/table_res.png">
 						</section>
-						<a href="#tutorial" class="scroll-to-top">
+						<a href="#main-div" class="scroll-to-top">
 							<img src="assets/tutorial/icon_arrow.png">
 						</a>
 					</div>
