change questionnaire to référentiel and update button to follow the scrolling of the page

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						<h3>Sommaire</h3>
 						<ol>
 							<li><a href="#comme_back">Retour à l'accueil</a></li>
-							<li><a href="#choose_questionnaire">Choisir son questionnaire</a></li>
+							<li><a href="#choose_questionnaire">Choisir son référentiel</a></li>
 							<li><a href="#evaluate_skills">Evaluer ses compétences</a></li>
 							<li><a href="#consult_result">Consulter les résultats</a></li>
 							<li><a href="#tuto_import">Guide importation</a></li>
@@ -88,7 +88,7 @@
 							<img class="tuto_images" src="./assets/tutorial/return_home.png">
 						</section>
 						<section>
-							<h3 id="choose_questionnaire">Choisir son questionnaire</h3>
+							<h3 id="choose_questionnaire">Choisir son référentiel</h3>
 							<p>En cliquant sur le bouton "Choisir référentiel", sélectionnez le référentiel correspondant à votre institution (Uni-fr ou HES-SO).</p>
 							<img class="tuto_images" src="./assets/tutorial/choose_questionnaire.png">
 						</section>
@@ -135,7 +135,7 @@
 							<p>Vous pouvez utiliser le lien Moodle du cours Digital Skills «Développer ses compétences numériques d’enseignant·e du supérieur» pour accéder aux ressources liées à ces compétences. </p>
 							<img class="tuto_images" src="./assets/tutorial/table_res.png">
 						</section>
-						<a href="#main-div" class="scroll-to-top">
+						<a href="#main-div" class="fixed-icon">
 							<img src="assets/tutorial/icon_arrow.png">
 						</a>
 					</div>
